# openlens

./: .env.example  .gitignore  HTTPS.md  LICENSE  MODELTOGPU.md  README.md  RUNNING.md  client.py  image_prep.py  image_preprocessing.py  import_os2.py  requirements.txt  server
.github/ISSUE_TEMPLATE/: feature_request.md
BestPrompt/: EvaluatePrompts.ipynb  Prompt.txt  PromptEvaluation.txt
Model/BestPrompt/: EvaluatePrompts.ipynb  Prompt.txt  submission.csv  submission.html
Model/FreeModelResults/: free_model_responses.csv  free_model_summary.csv
Model/ModelEvaluation/: EvaluateFreeModels.ipynb  EvaluateModels.ipynb  Ranking.ipynb  description_evaluations.csv  description_evaluations_v2.csv  model_quality_summary.csv  model_quality_summary_v2.csv  test-image-prep.py
Model/ModelEvaluation/ModelResults/: submission_gemini_2_5_flash.csv  submission_gemini_3_1_flash_lite.csv  submission_gemini_3_flash.csv  (+2 more)
ModelEvaluation/: Ranking.ipynb
ModelEvaluation/ModelResults/: submission_gemini_2_5_flash_lite.csv  submission_gpt_4_1_nano.csv  submission_gpt_5_5.csv  submission_qwen_2_5_vl_72b.csv  submission_qwen_3_vl_8b.csv
app/: .gitignore  gradle.properties  settings.gradle.kts
app/composeApp/: build.gradle.kts
app/gradle/: libs.versions.toml
app/iosApp/: project.yml
server/: .env.example  auth.py  bounding_box.py  client.py  config.py  database.py  db.py  image_prep.py  kratos.py  models.py  pyproject.toml  schemas.py  search_client.py  security.py  server.py  visualize_response.py
server/tests/: test_server.py
tests/: test_server.py
(+89 files in other folders)
