[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.51.0",
    "pillow>=11.0.0",
    "sqlmodel>=0.0.39",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
]
