[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.51.0",
    "pillow>=11.0.0",
    "ultralytics>=8.4.98",
]
